# synth

./: .gitignore  Cargo.toml  README.md
engine/: Cargo.toml
engine/src/: backend.rs  lib.rs  midi.rs  node.rs  pipeline.rs  router.rs  util.rs  wave.rs
engine/src/backend/: alsa_midi.rs  midir_midi.rs  pulse.rs
engine/src/midi/: messages.rs  parse.rs
engine/src/node/: dummy.rs  envelope.rs  filter.rs  gain.rs  oscillator.rs  ramp.rs
engine/src/pipeline/: midi_oscillator.rs  ramped_oscillator.rs
engine/src/wave/: interpolate.rs  tables.rs
engine/tests/: node_test.rs
src/: lib.rs  main.rs
