[package]
name = "engine"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp = "0.11.0"
dasp_sample = "0.11.0"
dasp_frame = "0.11.0"
alsa = "0.5.0"
pulse = { package = "libpulse-binding", version = "2.25.0" }
psimple = { package = "libpulse-simple-binding", version = "2.24.1" }
